added message function + login function as user
